Fix contrast issues with events
These are rgba related fixes

--- a/wdn/templates_4.0/less/layouts/events.less
+++ b/wdn/templates_4.0/less/layouts/events.less
@@ -86,7 +86,7 @@
 		}
 
 		.month, .time, .year {
-			color:fadeout(@dark-neutral, 35%);
+			color:fadeout(@dark-neutral, 25%);
 		}
 		
 		.time, .year {
